# canopy

./: .gitignore  README.md  __init__.py  pyproject.toml  run.py  setup.sh  update.sh
abtest/: 01_expansion_approaches.py  02_centroid_strategies.py  03_habitat_build_approaches.py  04_polars_load_pack.py  05_full_pipeline.py  06_geo_rework_findings.md  07_geo_centroid_bench.py  08_rollup_habitat_abtest.py  09_packaging_profile.py  10_habitat_upperband_abtest.py  11_occurrence_synonym_map_abtest.py  12_parent_rollup_write_abtest.py  13_gbif_id_stability.py  14_wikidata_id_stability.py  15_parent_canonical_stability.py  16_parent_raw_stability.py  17_acceptance_before_parents.py  18_status_aware_parent_lookup.py  19_ncbi_kingdom_prefilter_bench.py  20_aggregate_determinism_probe.py
config/: __init__.py  enums.py  schema.py  secrets.py.template  settings.py
data/: .gitignore
data/apis/: .gitignore
data/geo/: .gitattributes  .gitignore
data/processed/: .gitignore
data/releases/: .gitignore
data/source/: .gitignore
data/temp/: .gitignore
datasets/: bhl.py  col.py  fungorum.py  gbif.py  inaturalist.py  ipni.py  iucn.py  mycobank.py  ncbi.py  occurrences.py  powo.py  tropicos.py  wcvp.py  wfo.py  wikidata.py  wikipedia.py  wikispecies.py
datasets/docs/: README.md  bhl.md  col.md  fungorum.md  gbif.md  inaturalist.md  ipni.md  iucn.md  mycobank.md  ncbi.md  occurrences.md  powo.md  tropicos.md  wcvp.md  wfo.md  (+3 more)
pipeline/: diff.py  fuse.py  geo.py  geo_new.py  litmus.py
utils/: downloader.py  filehandlers.py  log.py  manifest.py  queries.py  s3.py  state.py
