[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canopy"
version = "0.1.0"
description = "Meso Taxonomy Importer Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"aiohttp",
	"aiofiles",
	"duckdb",
	"pyarrow",
	"polars",
	"numpy",
	"faiss-cpu",
	"psutil",
	"requests",
	"fsspec",
	"pandas"
]

[tool.setuptools]
package-dir = {"importer" = ".."}
packages = ["importer.canopy", "importer.canopy.config", "importer.canopy.datasets", "importer.canopy.utils", "importer.canopy.pipeline"]

